<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.trabajo.carlos.fireball.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txvLogin"
                android:layout_marginBottom="20dp"
                android:textSize="30sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmailLog"
                android:inputType="textEmailAddress"
                android:hint="@string/edtEmail"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPasswordLog"
                android:inputType="textPassword"
                android:hint="@string/edtPass"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtAlias"
                android:hint="@string/edtAlias"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <!--<Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnLogeo"
                android:background="@color/colorAccent"
                android:text="Iniciar sesión"/>-->

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/btnLogeo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/btnLogeo"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorNormal="@color/colorAccent"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="Logueado"
                custom:pb_textProgress="Iniciando sesión"
                custom:pb_textError="Error"
                custom:pb_colorError="@color/red_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvRecPass"
                android:layout_gravity="center"
                android:padding="20sp"
                android:textColor="@color/colorAccent"
                android:text="@string/txvOlvido"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvSignUp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/txvNoRegistrado"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
