<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.trabajo.carlos.fireball.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="REGISTRO USUARIO"
                android:layout_marginBottom="20dp"
                android:textSize="30sp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/edtEmail"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmailConfirm"
                android:inputType="textEmailAddress"
                android:hint="@string/edtEmailConfirm"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:hint="@string/edtPass"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnRegistro"
                android:background="@color/colorAccent"
                android:text="@string/btnRegistro"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvRecPass"
                android:padding="20sp"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:text="¿Olvidó su contraseña?"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvSignIn"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/txvYaRegistrado"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
